// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Tabs Renders Location Tabs with Mock Data 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationHeader
    buttonPress={[Function]}
    details="2 [missing \\"en.LOCATION.ITEMS\\" translation], 3 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (2)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (3)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Empty Data 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationHeader
    buttonPress={[Function]}
    details="0 [missing \\"en.LOCATION.ITEMS\\" translation], 0 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (0)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (0)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Location Tabs with Mock Large Location Data 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationHeader
    buttonPress={[Function]}
    details="100 [missing \\"en.LOCATION.ITEMS\\" translation], 100 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (100)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (100)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Location header as Scanned Event Value when location name is "-" 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    buttonPress={[Function]}
    details="2 [missing \\"en.LOCATION.ITEMS\\" translation], 3 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] -"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (2)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (3)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Manual Scan Component when isManualScanEnabled is set to true 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    buttonPress={[Function]}
    details="2 [missing \\"en.LOCATION.ITEMS\\" translation], 3 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] G - GroceryAisle 1-Section 1"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (2)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (3)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Renders Print Label button if "location printing" feature is enabled 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    buttonPress={[Function]}
    buttonText="[missing \\"en.LOCATION.PRINT_LABEL\\" translation]"
    details="2 [missing \\"en.LOCATION.ITEMS\\" translation], 3 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] -"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (2)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (3)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Tests rendering Tab Headers Renders items Header 1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomColor": "#eeeeee",
        "borderBottomWidth": 2,
        "flexDirection": "row",
        "marginHorizontal": 0,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "flex": 1,
          "fontSize": 18,
        }
      }
    >
      ITEMS
    </Text>
    <TouchableOpacity
      disabled={false}
      onPress={[Function]}
    >
      <View>
        <Text
          style={
            Object {
              "color": "#0071e9",
              "fontSize": 14,
              "paddingHorizontal": 25,
              "paddingVertical": 10,
            }
          }
        >
          [missing "en.GENERICS.ADD" translation]
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</React.Fragment>
`;

exports[`Test Location Tabs Tests rendering Tab Headers Renders pallet Header 1`] = `
<React.Fragment>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "borderBottomColor": "#eeeeee",
        "borderBottomWidth": 2,
        "flexDirection": "row",
        "marginHorizontal": 0,
        "paddingLeft": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "flex": 1,
          "fontSize": 18,
        }
      }
    >
      PALLETS
    </Text>
    <TouchableOpacity
      disabled={false}
      onPress={[Function]}
    >
      <View>
        <Text
          style={
            Object {
              "color": "#0071e9",
              "fontSize": 14,
              "paddingHorizontal": 25,
              "paddingVertical": 10,
            }
          }
        >
          [missing "en.GENERICS.ADD" translation]
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</React.Fragment>
`;

exports[`Test Location Tabs Tests rendering getSectionsDetails api Renders Loading Indicator for get Section details 1`] = `
<ActivityIndicator
  animating={true}
  color="#0071e9"
  hidesWhenStopped={true}
  size="large"
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Test Location Tabs Tests rendering getSectionsDetails api Renders Retry button if get section details api returns an error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <mockConstructor
    color="#e57373"
    name="alert"
    size={40}
  />
  <Text
    style={
      Object {
        "fontSize": 16,
        "textAlign": "center",
      }
    }
  >
    [missing "en.LOCATION.LOCATION_API_ERROR" translation]
  </Text>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#e57373",
        "borderRadius": 4,
        "height": 40,
        "justifyContent": "center",
        "marginVertical": 10,
        "width": "95%",
      }
    }
  >
    <Text>
      [missing "en.GENERICS.RETRY" translation]
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`Test Location Tabs Tests rendering removeSectionModal Renders Loading Indicator for Remove Section Modal 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": true,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={true}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    buttonPress={[Function]}
    details="0 [missing \\"en.LOCATION.ITEMS\\" translation], 0 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] -"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (0)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (0)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;

exports[`Test Location Tabs Tests rendering removeSectionModal Renders Retry button on Modal if remove section api returns an error 1`] = `
<React.Fragment>
  <ApiConfirmationModal
    api={
      Object {
        "error": "Network Error",
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText={null}
    handleConfirm={[Function]}
    isVisible={true}
    mainText="[missing \\"en.LOCATION.REMOVE_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1={null}
    subtext2={null}
  />
  <ApiConfirmationModal
    api={
      Object {
        "error": null,
        "isWaiting": false,
        "result": null,
        "value": null,
      }
    }
    cancelText={null}
    confirmText={null}
    errorText="[missing \\"en.LOCATION.CLEAR_SECTION_FAIL\\" translation]"
    handleConfirm={[Function]}
    isVisible={false}
    mainText="[missing \\"en.LOCATION.CLEAR_SECTION_CONFIRMATION\\" translation]"
    onClose={[Function]}
    subtext1="[missing \\"en.LOCATION.CLEAR_SECTION_SALES_FLOOR_MESSAGE\\" translation]"
    subtext2="[missing \\"en.LOCATION.CLEAR_SECTION_WONT_DELETE\\" translation]"
  />
  <LocationManualScan
    keyboardType="default"
  />
  <LocationHeader
    buttonPress={[Function]}
    details="0 [missing \\"en.LOCATION.ITEMS\\" translation], 0 [missing \\"en.LOCATION.PALLETS\\" translation]"
    isDisabled={false}
    location="[missing \\"en.LOCATION.SECTION\\" translation] -"
  />
  <MaterialTopTabNavigator
    initialRouteName="FloorDetails"
    swipeEnabled={true}
    tabBarOptions={
      Object {
        "activeTintColor": "#0071e9",
        "inactiveTintColor": "#616161",
        "indicatorStyle": Object {
          "backgroundColor": "#0071e9",
        },
        "style": Object {
          "backgroundColor": "#ffffffff",
        },
      }
    }
  >
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="FloorDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.FLOORS\\" translation] (0)",
        }
      }
    >
      [Function]
    </Screen>
    <Screen
      listeners={
        Object {
          "focus": [Function],
          "tabPress": [Function],
        }
      }
      name="ReserveDetails"
      options={
        Object {
          "title": "[missing \\"en.LOCATION.RESERVES\\" translation] (0)",
        }
      }
    >
      [Function]
    </Screen>
  </MaterialTopTabNavigator>
</React.Fragment>
`;
